# fastlcs

./: CMakeLists.txt  README.md  README.rst  example.cpp  example.py  lcs.h  setup.py
example/: example.cpp  example.py
python/fastlcs/: __init__.py  fastlcs.py  pybind.cpp
src/: fastlcs.cpp  fastlcs.h  lcs.cpp  lcs.h  pybind.cpp
